...
               _ = value.compactMap { key, value in
                    if let _password = value["passWord"] , password == _password {
                        let userName = value["userName"]
                        let userModel = UserModel(userID: snapShot.key, userName: userName ?? "", passWord: "")
                        completion(userModel)
                    } else {
                        failure("Wrong password")
                    }
                }
            }
    }
}

