...
                        .resizable()
                        .renderingMode(.template)
                        .foregroundStyle(Color(hex: "89D02E"))
                        .frame(width: 25, height: 25)
                }
                .buttonStyle(.plain)
                .accessibilityIdentifier("CreateNote")
            }
            .padding(.trailing, 20)
            
            Picker(selection: $vm.selectionTab, label: Text(""), content: {
                Text("My Note").tag(0)
                Text("All Notes").tag(1)
...
